--- a/app/src/main/res/layout/fragment_main_two.xml
+++ b/app/src/main/res/layout/fragment_main_two.xml
@@ -52,7 +52,7 @@
                     android:layout_marginTop="@dimen/dp_10"
                     android:ellipsize="end"
                     android:maxLines="3"
-                    android:text="团队aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
+                    android:text=""
                     android:textColor="@color/black"
                     android:textSize="12sp" />
 
