--- a/app/src/main/res/layout/activity_team_manager.xml
+++ b/app/src/main/res/layout/activity_team_manager.xml
@@ -7,162 +7,212 @@
     android:background="@color/bg_common"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/dp_15"
-            android:layout_marginTop="@dimen/dp_15"
-            android:layout_marginEnd="@dimen/dp_15"
-            android:layout_marginBottom="@dimen/dp_10"
-            android:background="@color/white"
-            app:cardCornerRadius="@dimen/dp_6"
-            app:cardElevation="@null">
+            android:orientation="vertical">
 
-            <LinearLayout
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dp_10"
-                android:layout_marginTop="@dimen/dp_10"
-                android:layout_marginEnd="@dimen/dp_10"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/dp_15"
+                android:layout_marginTop="@dimen/dp_15"
+                android:layout_marginEnd="@dimen/dp_15"
                 android:layout_marginBottom="@dimen/dp_10"
-                android:orientation="vertical">
+                android:background="@color/white"
+                app:cardCornerRadius="@dimen/dp_6"
+                app:cardElevation="@null">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_marginStart="@dimen/dp_10"
+                    android:layout_marginTop="@dimen/dp_10"
+                    android:layout_marginEnd="@dimen/dp_10"
+                    android:layout_marginBottom="@dimen/dp_10"
+                    android:orientation="vertical">
 
                     <LinearLayout
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:orientation="vertical">
+                        android:orientation="horizontal">
 
-                        <TextView
-                            android:id="@+id/tv_team"
-                            style="@style/small_text"
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:text=""
-                            android:textColor="@color/black"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
+                            android:layout_weight="2"
+                            android:orientation="vertical">
 
-                        <TextView
-                            android:id="@id/tv_name"
-                            style="@style/small_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dp_6"
-                            android:drawableEnd="@mipmap/team_director"
-                            android:drawablePadding="@dimen/dp_2"
-                            android:text=""
-                            android:textColor="@color/black"
-                            android:textSize="14sp" />
+                            <TextView
+                                android:id="@+id/tv_team"
+                                style="@style/small_text"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text=""
+                                android:textColor="@color/black"
+                                android:textSize="16sp"
+                                android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/tv_invite_code"
-                            style="@style/small_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dp_10"
-                            android:text=""
-                            android:textColor="@color/black"
-                            android:textSize="14sp" />
+                            <TextView
+                                android:id="@id/tv_name"
+                                style="@style/small_text"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/dp_6"
+                                android:drawableEnd="@mipmap/team_director"
+                                android:drawablePadding="@dimen/dp_2"
+                                android:text=""
+                                android:textColor="@color/black"
+                                android:textSize="14sp" />
+
+                            <TextView
+                                android:id="@+id/tv_invite_code"
+                                style="@style/small_text"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/dp_10"
+                                android:text=""
+                                android:textColor="@color/black"
+                                android:textSize="14sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center_vertical|end">
+
+                            <ImageView
+                                android:id="@id/iv_image"
+                                android:layout_width="45dp"
+                                android:layout_height="45dp" />
+
+                        </LinearLayout>
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center_vertical|end">
 
-                        <ImageView
-                            android:id="@id/iv_image"
-                            android:layout_width="45dp"
-                            android:layout_height="45dp" />
+                    <EditText
+                        android:id="@id/et_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp"
+                        android:layout_marginTop="@dimen/dp_10"
+                        android:background="@drawable/bg_gray_line"
+                        android:gravity="start"
+                        android:hint="请填写团队公告"
+                        android:maxLines="4"
+                        android:padding="@dimen/dp_8"
+                        android:textColor="@color/black"
+                        android:textSize="14sp" />
 
-                    </LinearLayout>
+                    <Button
+                        android:id="@id/btn_ok"
+                        android:layout_width="80dp"
+                        android:layout_height="28dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="@dimen/dp_10"
+                        android:layout_marginRight="@dimen/dp_18"
+                        android:background="@drawable/btn_orange"
+                        android:enabled="false"
+                        android:text="发布公告"
+                        android:textColor="@color/color_white"
+                        android:textSize="12sp" />
                 </LinearLayout>
 
-
-                <EditText
-                    android:id="@id/et_content"
-                    android:layout_width="match_parent"
-                    android:layout_height="70dp"
-                    android:layout_marginTop="@dimen/dp_10"
-                    android:background="@drawable/bg_gray_line"
-                    android:gravity="start"
-                    android:hint="请填写团队公告"
-                    android:maxLines="4"
-                    android:padding="@dimen/dp_8"
-                    android:textColor="@color/black"
-                    android:textSize="14sp" />
-
-                <Button
-                    android:id="@id/btn_ok"
-                    android:layout_width="80dp"
-                    android:layout_height="28dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/dp_10"
-                    android:layout_marginRight="@dimen/dp_18"
-                    android:background="@drawable/btn_orange"
-                    android:enabled="false"
-                    android:text="发布公告"
-                    android:textColor="@color/color_white"
-                    android:textSize="12sp" />
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
+            </android.support.v7.widget.CardView>
 
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/dp_15"
-            android:layout_marginTop="@dimen/dp_20"
-            android:layout_marginEnd="@dimen/dp_15"
-            android:layout_marginBottom="@dimen/dp_10"
-            android:background="@color/color_gray_f"
-            app:cardCornerRadius="@dimen/dp_6"
-            app:cardElevation="@null">
-
-            <LinearLayout
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/dp_15"
+                android:layout_marginTop="@dimen/dp_20"
+                android:layout_marginEnd="@dimen/dp_15"
+                android:layout_marginBottom="@dimen/dp_10"
+                android:background="@color/color_gray_f"
+                app:cardCornerRadius="@dimen/dp_6"
+                app:cardElevation="@null">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:background="@color/white"
-                    android:gravity="center_vertical"
+                    android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/team_click_count"
-                        style="@style/small_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:text="团队点击"
-                        android:textColor="@color/black" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:background="@color/white"
+                        android:gravity="center_vertical"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/team_click_count"
+                            style="@style/small_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="15dp"
+                            android:text="团队今日计费"
+                            android:textColor="@color/black" />
+                    </LinearLayout>
+
+                    <com.github.mikephil.charting.charts.LineChart
+                        android:id="@+id/lineChart"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:background="@color/color_gray_f" />
                 </LinearLayout>
 
-                <com.github.mikephil.charting.charts.LineChart
-                    android:id="@+id/lineChart"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:background="@color/color_gray_f" />
-            </LinearLayout>
+            </android.support.v7.widget.CardView>
 
-        </android.support.v7.widget.CardView>
-    </LinearLayout>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/dp_15"
+                android:layout_marginTop="@dimen/dp_20"
+                android:layout_marginEnd="@dimen/dp_15"
+                android:layout_marginBottom="@dimen/dp_10"
+                android:background="@color/color_gray_f"
+                app:cardCornerRadius="@dimen/dp_6"
+                app:cardElevation="@null">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:background="@color/white"
+                        android:gravity="center_vertical"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/click_week_count"
+                            style="@style/small_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="15dp"
+                            android:text="团队七日计费"
+                            android:textColor="@color/black" />
+                    </LinearLayout>
+
+                    <com.github.mikephil.charting.charts.LineChart
+                        android:id="@+id/lineChart_week"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:background="@color/color_gray_f" />
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
+    </ScrollView>
 </com.scwang.smartrefresh.layout.SmartRefreshLayout>
