--- a/app/src/main/res/layout/activity_team_manager.xml
+++ b/app/src/main/res/layout/activity_team_manager.xml
@@ -128,6 +128,7 @@
 
 
             <android.support.v7.widget.CardView
+                android:id="@+id/cardView_today"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -136,6 +137,7 @@
                 android:layout_marginEnd="@dimen/dp_15"
                 android:layout_marginBottom="@dimen/dp_10"
                 android:background="@color/color_gray_f"
+                android:visibility="gone"
                 app:cardCornerRadius="@dimen/dp_6"
                 app:cardElevation="@null">
 
@@ -172,6 +174,7 @@
 
 
             <android.support.v7.widget.CardView
+                android:id="@+id/cardView_week"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -180,6 +183,7 @@
                 android:layout_marginEnd="@dimen/dp_15"
                 android:layout_marginBottom="@dimen/dp_10"
                 android:background="@color/color_gray_f"
+                android:visibility="gone"
                 app:cardCornerRadius="@dimen/dp_6"
                 app:cardElevation="@null">
 
