--- a/app/src/main/res/layout/fragment_main_two.xml
+++ b/app/src/main/res/layout/fragment_main_two.xml
@@ -33,28 +33,46 @@
                 android:layout_marginBottom="@dimen/dp_10"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@id/tv_title"
-                    style="@style/small_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableLeft="@mipmap/team_captain"
-                    android:drawablePadding="@dimen/dp_10"
-                    android:text="团队"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@id/tv_desc"
-                    style="@style/small_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dp_10"
-                    android:ellipsize="end"
-                    android:maxLines="3"
-                    android:text=""
-                    android:textColor="@color/black"
-                    android:textSize="12sp" />
+                    <TextView
+                        android:id="@id/tv_title"
+                        style="@style/small_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawableLeft="@mipmap/team_captain"
+                        android:drawablePadding="@dimen/dp_10"
+                        android:text="团队"
+                        android:textColor="@color/black"
+                        android:textSize="18sp" />
+
+                    <ImageView
+                        android:id="@id/iv_image"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="15dp" />
+
+                    <TextView
+                        android:id="@id/tv_desc"
+                        style="@style/small_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/tv_title"
+                        android:layout_marginTop="@dimen/dp_10"
+                        android:layout_marginEnd="15dp"
+                        android:layout_toLeftOf="@id/iv_image"
+                        android:ellipsize="end"
+                        android:maxLines="3"
+                        android:text=""
+                        android:textColor="@color/black"
+                        android:textSize="12sp" />
+                </RelativeLayout>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -80,7 +98,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="end"
-                        android:text="今日计费次数"
+                        android:text="今日总计费"
                         android:textColor="@color/black"
                         android:textSize="14sp" />
                 </LinearLayout>
