--- a/app/src/main/res/layout/activity_click_detailed.xml
+++ b/app/src/main/res/layout/activity_click_detailed.xml
@@ -11,7 +11,6 @@
         style="@style/lv_default_style"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg_common"
-        android:dividerHeight="0dp" />
+        android:background="@color/bg_common" />
 
 </com.scwang.smartrefresh.layout.SmartRefreshLayout>
