--- a/app/src/main/res/layout/item_lv_click_list.xml
+++ b/app/src/main/res/layout/item_lv_click_list.xml
@@ -3,13 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/dp_15"
-    android:layout_marginEnd="@dimen/dp_15"
     android:background="@color/white"
     android:gravity="center_vertical"
     android:minHeight="50dp"
-    android:orientation="horizontal">
-
+    android:orientation="horizontal"
+    android:paddingStart="@dimen/dp_15"
+    android:paddingEnd="@dimen/dp_15">
 
     <TextView
         android:id="@id/tv_title"
@@ -24,15 +23,12 @@
         android:textSize="16sp" />
 
     <TextView
-        android:id="@id/tv_desc"
+        android:id="@+id/tv_detail_count"
         style="@style/small_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableRight="@mipmap/address_back"
-        android:drawablePadding="@dimen/dp_12"
-        android:ellipsize="end"
-        android:maxLines="1"
         android:text="desc"
-        android:textSize="16sp" />
+        android:textColor="@color/color_gray"
+        android:textSize="14sp" />
 
 </LinearLayout>
