--- a/app/src/main/res/layout/title_common.xml
+++ b/app/src/main/res/layout/title_common.xml
@@ -37,6 +37,7 @@
         android:visibility="gone">
 
         <TextView
+            android:id="@+id/tv_bar_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
