--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -38,22 +38,21 @@
             android:textStyle="bold" />
 
 
-        <EditText
-            android:id="@+id/et_phone"
+        <TextView
+            android:id="@+id/tv_phone"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="40dp"
             android:background="@null"
-            android:hint="请输入手机号"
-            android:imeOptions="actionDone"
-            android:inputType="number"
+            android:gravity="center_vertical"
             android:maxLines="1"
             android:singleLine="true"
+            android:text="手机号"
             android:textColor="@color/colorBlack"
-            android:textColorHint="@color/color_gray"
-            android:textSize="16sp" />
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <View
             android:layout_width="match_parent"
@@ -63,6 +62,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="55dp"
+            android:layout_marginTop="20dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
