--- a/app/src/main/res/layout/activity_modify_login_psd.xml
+++ b/app/src/main/res/layout/activity_modify_login_psd.xml
@@ -9,23 +9,44 @@
     android:paddingStart="@dimen/dp_15"
     android:paddingEnd="@dimen/dp_15">
 
-
-    <EditText
-        android:id="@+id/et_phone"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="80dp"
-        android:background="@null"
-        android:hint="请输入手机号"
-        android:imeOptions="actionDone"
-        android:inputType="number"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:textColor="@color/colorBlack"
-        android:textColorHint="@color/color_gray"
-        android:textSize="16sp" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/et_phone"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_weight="1"
+            android:background="@null"
+            android:hint="请输入手机号"
+            android:imeOptions="actionDone"
+            android:inputType="number"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:textColor="@color/colorBlack"
+            android:textColorHint="@color/color_gray"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/btn_send_msg"
+            android:layout_width="90dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="18dp"
+            android:layout_marginRight="@dimen/dp_18"
+            android:background="@drawable/btn_orange"
+            android:enabled="false"
+            android:gravity="center"
+            android:text="获取验证码"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+    </LinearLayout>
+
 
     <View
         android:layout_width="match_parent"
@@ -109,6 +130,7 @@
         android:background="@color/color_gray_c" />
 
     <EditText
+        android:inputType="number"
         android:id="@+id/et_sms_code"
         android:layout_width="match_parent"
         android:layout_height="55dp"
